website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghss-website
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8888
  selector:
    app: ghss-website
